syntax = "proto3"; //latest protocol version

package todoPackage; //we name this package so thatwe know it is a package that has multiple services

import "google/protobuf/empty.proto";

service Todo {

    //take a todo item and return the todo created
    rpc createTodo(TodoItem) returns (TodoItem);
    //takes no parameter, but return a list of todos from our server
    rpc readTodos(google.protobuf.Empty) returns (TodoItems);
    rpc readTodosStream(google.protobuf.Empty) returns (stream TodoItem);

}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

//TodoItems will be an array of Todo tasks
message TodoItems {
    repeated TodoItem items = 1;
}